syntax = "proto3";

option go_package = "github.com/basilnsage/test-app/protos";

message GenericEvent {
    string type = 1;
    PostEvent post_data = 2;
    CommentEvent comment_data = 3;
}

message PostEvent {
    string title = 1;
    string body = 2;
    int64 created_at = 3;
    string uuid = 4;
}

message CommentEvent {
    string body = 1;
    string status = 2;
    int64 created_at = 3;
    string comment_id = 4;
    string post_id = 5;
}
